# Late-delivery-prediction-Supply-chain-

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  agent-workflow.md  architecture.md  mlflow.db  problem_statement.md  pyproject.toml  run_training.py
.github/workflows/: ci.yml
configs/: data_config.yaml  deployment_config.yaml  features_config.yaml  training_config.yaml
core/: __init__.py  deployment.py  drift.py  eda.py  evaluation.py  monitoring.py  parity.py  preprocessing.py  training.py  validation.py
docs/: code_review.md  ship_checklist.md  system_design.md
docs/checklists/: anti-slop-checklist.md
docs/plans/: README.md  _template.md
docs/research/: README.md  _template.md
docs/runbooks/: incident_response.md  rollback_runbook.md
pipelines/: __init__.py  drift_pipeline.py  inference_pipeline.py  monitoring_pipeline.py  shadow_pipeline.py  training_pipeline.py
scripts/: golden_parity_check.py  quality_gate.sh  rollback_production.py
steps/: __init__.py  drift_detect.py  eda.py  engineer_features.py  evaluate.py  inference.py  ingest.py  monitor.py  register.py  shadow_compare.py  split.py  train.py  validate.py
tests/: __init__.py  test_deployment.py  test_drift.py  test_eda.py  test_evaluation.py  test_monitoring.py  test_parity.py  test_pipeline_smoke.py  test_preprocessing.py  test_validation.py
