[project]
name = "supply-chain-late-delivery"
version = "0.1.0"
description = "Late delivery risk prediction at order placement time"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "zenml==0.92.0",
    "mlflow==3.11.1",
    "evidently==0.7.21",
    "scikit-learn==1.8.0",
    "lightgbm==4.6.0",
    "xgboost>=2.0.0",
    "pandas==2.3.3",
    "numpy==2.4.4",
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "steps*", "pipelines*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -x"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "SIM", "W"]

[tool.ruff.lint.isort]
known-first-party = ["core", "steps", "pipelines"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = ["^tests/"]
